modificaciones en formulario reserva

--- a/src/app/privado/reserva/modal-reserva/modal-reserva.component.html
+++ b/src/app/privado/reserva/modal-reserva/modal-reserva.component.html
@@ -299,86 +299,8 @@
                 <div class="habitaciones">
                   <div class="row">
                     <div class="col-md-6">
-                      <div class="form-group row">
-                        <label class="col-sm-4 col-form-label">No. personas</label>
-                        <div class="col-sm-4 pr-1">
-                          <input
-                            type="number"
-                            placeholder="Adultos"
-                            class="form-control"
-                            name="adultos"
-                            [(ngModel)]="model.adultos"
-                            #adultos="ngModel"
-                            required
-                          />
-                          <div *ngIf="f.submitted && !adultos.valid" class="invalid-feedback">
-                            El número de adultos es requerido
-                          </div>
-                        </div>
-                        <div class="col-sm-4 pl-1">
-                          <input
-                            type="number"
-                            placeholder="Niños"
-                            class="form-control"
-                            name="ninos"
-                            [(ngModel)]="model.ninos"
-                            #ninos="ngModel"
-                            required
-                          />
-                          <div *ngIf="f.submitted && !ninos.valid" class="invalid-feedback">
-                            El número de niños es requerido
-                          </div>
-                        </div>
-                      </div>
-                      <div class="form-group row">
-                        <label for="aerolinea" class="col-sm-4 col-form-label">Aerolínea</label>
-                        <div class="col-sm-8">
-                          <select
-                            class="form-control"
-                            name="aerolinea"
-                            [(ngModel)]="model.idAerolinea"
-                            #aerolinea="ngModel"
-                            required
-                          >
-                            <option *ngFor="let op of aerolineas" [value]="op.idAerolinea">{{ op.aerolinea }}</option>
-                          </select>
-                          <div *ngIf="f.submitted && !aerolinea.valid" class="invalid-feedback">
-                            La aerolínea es requerida
-                          </div>
-                        </div>
-                      </div>
-                      <div class="form-group row">
-                        <label for="fuente" class="col-sm-4 col-form-label">Captado de</label>
-                        <div class="col-sm-8">
-                          <select
-                            class="form-control"
-                            name="fuente"
-                            [(ngModel)]="model.idFuente"
-                            #fuente="ngModel"
-                            required
-                          >
-                            <option *ngFor="let op of fuentes" [value]="op.idFuente">{{ op.fuente }}</option>
-                          </select>
-                          <div *ngIf="f.submitted && !fuente.valid" class="invalid-feedback">
-                            La fuente de captación es requerida
-                          </div>
-                        </div>
-                      </div>
-                      <div class="form-group">
-                        <label for="notas">Notas</label>
-                        <textarea
-                          class="form-control"
-                          id="notas"
-                          name="notas"
-                          rows="5"
-                          [(ngModel)]="model.notas"
-                          #notas="ngModel"
-                          maxlength="600"
-                          >{{ model.notas }}</textarea
-                        >
-                      </div>
-                    </div>
-                    <div class="col-md-6">
+                      <h5>Información del pasajero</h5>
+                      <hr class="my-2" />
                       <div class="form-group">
                         <label for="correo">Correo electrónico</label>
                         <div class="input-group">
@@ -450,32 +372,112 @@
                           <p class="text-danger">El nombre es requerido</p>
                         </div>
                       </div>
-                      <div class="form-group row">
-                        <label for="pais" class="col-sm-4 col-form-label">País</label>
-                        <div class="col-sm-8">
-                          <select
-                            id="pais"
-                            name="pais"
-                            style="width: 100%"
-                            [disabled]="pasajeroRegistrado && !modificarPasajero"
-                          >
-                            <option *ngFor="let pais of paisesFormat" [value]="pais.id">{{ pais.text }}</option>
-                          </select>
+                      <div class="form-group">
+                        <label for="pais">País</label>
+                        <select
+                          id="pais"
+                          name="pais"
+                          style="width: 100%"
+                          class="form-control"
+                          [disabled]="pasajeroRegistrado && !modificarPasajero"
+                        >
+                          <option *ngFor="let pais of paisesFormat" [value]="pais.id">{{ pais.text }}</option>
+                        </select>
+                      </div>
+                      <div class="form-group">
+                        <label for="noContacto">No. contacto</label>
+                        <input
+                          type="text"
+                          class="form-control"
+                          name="noContacto"
+                          [(ngModel)]="model.pasajero.noContacto"
+                          #noContacto="ngModel"
+                          [readonly]="pasajeroRegistrado && !modificarPasajero"
+                          maxlength="15"
+                        />
+                      </div>
+                    </div>
+                    <div class="col-md-6">
+                      <h5>Información de la reserva</h5>
+                      <hr class="my-2" />
+                      <div class="form-group">
+                        <label for="noPersonas">No. personas</label>
+                        <div class="row" name="noPersonas">
+                          <div class="col-sm-6 pr-1">
+                            <input
+                              type="number"
+                              placeholder="Adultos"
+                              class="form-control"
+                              name="adultos"
+                              [(ngModel)]="model.adultos"
+                              #adultos="ngModel"
+                              required
+                            />
+                            <div *ngIf="f.submitted && !adultos.valid" class="invalid-feedback">
+                              El número de adultos es requerido
+                            </div>
+                          </div>
+                          <div class="col-sm-6 pl-1">
+                            <input
+                              type="number"
+                              placeholder="Niños"
+                              class="form-control"
+                              name="ninos"
+                              [(ngModel)]="model.ninos"
+                              #ninos="ngModel"
+                              required
+                            />
+                            <div *ngIf="f.submitted && !ninos.valid" class="invalid-feedback">
+                              El número de niños es requerido
+                            </div>
+                          </div>
                         </div>
                       </div>
-                      <div class="form-group row">
-                        <label for="noContacto" class="col-sm-4 col-form-label">No. contacto</label>
-                        <div class="col-sm-8">
-                          <input
-                            type="text"
-                            class="form-control"
-                            name="noContacto"
-                            [(ngModel)]="model.pasajero.noContacto"
-                            #noContacto="ngModel"
-                            [readonly]="pasajeroRegistrado && !modificarPasajero"
-                            maxlength="15"
-                          />
+                      <div class="form-group">
+                        <label for="aerolinea">Aerolínea</label>
+
+                        <select
+                          class="form-control"
+                          name="aerolinea"
+                          [(ngModel)]="model.idAerolinea"
+                          #aerolinea="ngModel"
+                          required
+                        >
+                          <option *ngFor="let op of aerolineas" [value]="op.idAerolinea">{{ op.aerolinea }}</option>
+                        </select>
+                        <div *ngIf="f.submitted && !aerolinea.valid" class="invalid-feedback">
+                          La aerolínea es requerida
                         </div>
+                      </div>
+                      <div class="form-group">
+                        <label for="fuente">Captado de</label>
+                        <select
+                          class="form-control"
+                          name="fuente"
+                          [(ngModel)]="model.idFuente"
+                          #fuente="ngModel"
+                          required
+                        >
+                          <option *ngFor="let op of fuentes" [value]="op.idFuente">{{ op.fuente }}</option>
+                        </select>
+                        <div *ngIf="f.submitted && !fuente.valid" class="invalid-feedback">
+                          La fuente de captación es requerida
+                        </div>
+                      </div>
+                    </div>
+                    <div class="col-md-12">
+                      <div class="form-group">
+                        <label for="notas">Notas</label>
+                        <textarea
+                          class="form-control"
+                          id="notas"
+                          name="notas"
+                          rows="3"
+                          [(ngModel)]="model.notas"
+                          #notas="ngModel"
+                          maxlength="600"
+                          >{{ model.notas }}</textarea
+                        >
                       </div>
                     </div>
                   </div>
