Mantenimiento de agencia

--- a/src/app/privado/configuracion/configuracion.component.html
+++ b/src/app/privado/configuracion/configuracion.component.html
@@ -9,17 +9,12 @@
     <div class="col-lg-9 col-md-10 col-sm-12">
       <div class="row mb-1">
         <div class="col-md-6 col-sm-12">
-          <div
-            class="card hoverable"
-            [routerLink]="['/configuracion/adicionales']"
-          >
+          <div class="card hoverable" [routerLink]="['/configuracion/adicionales']">
             <div class="card-body">
               <h5 class="card-title">Adicionales</h5>
               <p class="card-text">
-                Registra, edita o elimina los servicios adicionales que manejas
-                en tu hospedaje. Los adicionales se pueden registrar al momento
-                de hacer una reserva y/o mientras no se haya hecho el proceso de
-                check-out.
+                Registra, edita o elimina los servicios adicionales que manejas en tu hospedaje. Los adicionales se
+                pueden registrar al momento de hacer una reserva y/o mientras no se haya hecho el proceso de check-out.
               </p>
             </div>
           </div>
@@ -29,10 +24,20 @@
             <div class="card-body">
               <h5 class="card-title">Tarifas</h5>
               <p class="card-text">
-                Registra, edita o elimina las tarifas que manejas en tu
-                hospedaje. Las tarifas se asignan a las habitaciones al
-                memomento de hacer una reserva y suman a la cuenta final
-                dependiendo los días que se ocupe la habitación.
+                Registra, edita o elimina las tarifas que manejas en tu hospedaje. Las tarifas se asignan a las
+                habitaciones al memomento de hacer una reserva y suman a la cuenta final dependiendo los días que se
+                ocupe la habitación.
+              </p>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-6 col-sm-12 mt-2">
+          <div class="card hoverable" [routerLink]="['/agencias']">
+            <div class="card-body">
+              <h5 class="card-title">Agencias</h5>
+              <p class="card-text">
+                Registra, edita o elimina las agencias con las que trabaja tu hospedaje. Puedes registrar una agencia
+                par asignarla a una reserva.
               </p>
             </div>
           </div>
@@ -44,8 +49,7 @@
         <div class="card-body">
           <h4 class="card-title">Ayuda</h4>
           <p class="card-text">
-            Configura opciones relevantes en tu sistema, como adicionales o las
-            tarifas de tu negocio.
+            Configura opciones relevantes en tu sistema, como adicionales o las tarifas de tu negocio.
           </p>
         </div>
       </div>
