Cambio de idReserva

--- a/src/app/privado/reserva/modal-reserva/modal-reserva.component.html
+++ b/src/app/privado/reserva/modal-reserva/modal-reserva.component.html
@@ -299,7 +299,7 @@
                 <div class="habitaciones">
                   <div class="row">
                     <div class="col-md-6 px-1">
-                      <div *ngIf="this.model.id" class="alert alert-secondary" role="alert">
+                      <div *ngIf="this.model.idReserva" class="alert alert-secondary" role="alert">
                         <div class="form-check form-check-inline">
                           <label class="form-check-label">Tipo de cliente</label>
                           <!-- <h6>Tipo de cliente</h6> -->
