--- a/src/app/privado/reserva/reserva.component.html
+++ b/src/app/privado/reserva/reserva.component.html
@@ -52,5 +52,6 @@
     (success)="onSuccessEstados()"
     (cancelaEstados)="onCancelaEstados()"
   ></app-modal-estados>
+  <app-modal-notas [notas]="model.notas" (_closeModal)="onCloseNotasModal()"></app-modal-notas>
 </div>
 <!-- FIN CONTAINER -->
