--- a/src/app/compartido/components/modal/modal.component.html
+++ b/src/app/compartido/components/modal/modal.component.html
@@ -6,12 +6,13 @@
   role="dialog"
   aria-labelledby="exampleModalLabel"
   aria-hidden="true"
+  [attr.data-backdrop]="_backdrop"
 >
   <div [class]="'modal-dialog ' + (_type || '')" role="document">
     <div class="modal-content">
       <div class="modal-header bg-primary text-light">
         <h5 class="modal-title" id="exampleModalLabel">{{ _title }}</h5>
-        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+        <button type="button" class="close" aria-label="Close" (click)="closeModal()">
           <span aria-hidden="true">&times;</span>
         </button>
       </div>
@@ -21,7 +22,7 @@
       <ng-content></ng-content>
       <div class="modal-footer">
         <img *ngIf="_loading" src="/assets/images/loading.svg" />
-        <button *ngIf="!_loading" type="button" class="btn btn-light" data-dismiss="modal">
+        <button *ngIf="!_loading" type="button" class="btn btn-light" (click)="closeModal()">
           {{ _cancelarText || 'Cerrar' }}
         </button>
         <button
